--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
         <div class="form-group">
             <button type="submit" class="btn btn-success">Call the Alligator!</button>
         </div>
+        <div id="spit"></div>
     </form>
 
     <div class="page-header" id="about">
