--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <script src="/js/jquery-1.10.2.min.js"></script>
+    <script src="/js/jquery.dataTables.min.js"></script>
+    <link href="/css/datatables/jquery.dataTables.css" rel="stylesheet">
 
     <link href="/css/main.css" rel="stylesheet">
     <script src="/js/plugins.js"></script>
@@ -88,6 +90,7 @@
     </p>
 
 
+
     <div class="page-header" id="the-swamp">
         <h1>The Swamp</h1>
     </div>
@@ -99,7 +102,19 @@
         <div class="form-group">
             <button type="submit" class="btn btn-success">Call the Alligator!</button>
         </div>
-        <div id="spit"></div>
+        <div id="spit">
+            <table cellpadding="0" cellspacing="0" border="0" class="display" id="results">
+                <thead>
+                    <tr>
+                        <th>Event</th>
+                        <th>Total Time</th>
+                        <th>Number of Events</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
     </form>
 
     <div class="page-header" id="about">
@@ -117,7 +132,6 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="/js/bootstrap.min.js"></script>
 </body>
 </html>
