--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
             </div>
         </div>
         <div id="spit">
+            <p>Sort by clicking the headers. Shift-click for multi-column sorting.</p>
             <table cellpadding="0" cellspacing="0" border="0" class="display" id="results">
                 <thead>
                     <tr>
@@ -113,6 +114,13 @@
                         <th>Number of Events</th>
                     </tr>
                 </thead>
+                <tfoot>
+                    <tr>
+                        <th></th>
+                        <th id="total_time"></th>
+                        <th id="total_events"></th>
+                    </tr>
+                </tfoot>
                 <tbody>
                 </tbody>
             </table>
