--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
 
                 <p>Yeah, I keep my project time logs in iCal! Sometimes. So what?</p>
 
+                <p>
+                    iCal aggregator => iCal alligator => iCalligator
+                </p>
+
             </div>
         </div>
     </div>
@@ -174,10 +178,17 @@ Scheduled: 19.02. 2014. 13:30:00  to 15:00:00</pre>
         Using:
     </p>
     <ul>
-        <li>jQuery</li>
-        <li>jQuery.dataTables</li>
-        <li>Bootstrap</li>
+        <li><a href="http://jquery.com/" target="_blank">jQuery</a></li>
+        <li><a href="http://datatables.net/" target="_blank">DataTables</a></li>
+        <li><a href="http://datatables.net/extras/tabletools/" target="_blank">TableTools</a></li>
+        <li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></li>
     </ul>
+    <p>And of course:</p>
+    <ul>
+        <li><a href="http://www.apple.com/osx/apps/#calendar" target="_blank">Calendar</a></li>
+    </ul>
+
+    <hr />
 
     <p>
         Oh, P.S:
