--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <script src="/js/jquery-1.10.2.min.js"></script>
     <script src="/js/jquery.dataTables.min.js"></script>
+    <script src="/js/moment.js"></script>
     <script src="/js/dataTables.tableTools.min.js"></script>
     <link href="/css/datatables/jquery.dataTables.css" rel="stylesheet">
     <link href="/css/datatables/dataTables.tableTools.min.css" rel="stylesheet">
@@ -120,8 +121,17 @@
                 <label for="food">Here paste food for the iCalligator:</label>
                 <textarea name="food" id="food" class="form-control" rows="10"></textarea>
             </div>
-            <div class="form-group">
-                <button type="submit" class="btn btn-success">Call the Alligator!</button>
+            <div class="form-group row">
+                <div class="col-sm-6">
+                    <h4>Select your format:</h4>
+                    <select id="datetime_format">
+                        <option data-datetimeformat='D MMMM YYYY h:mm:ss a' data-timeformat="h:mm:ss a">19 May 2014 8:45:00 am to 12:45:00 pm</option>
+                        <option data-datetimeformat='MMM D, YYYY, h:mm:ss a' data-timeformat="h:mm:ss a">Jun 5, 2014, 12:30:00 PM to 3:00:00 PM</option>
+                    </select>
+                </div>
+                <div class="col-sm-6">
+                    <button type="submit" class="btn btn-success">Call the Alligator!</button>
+                </div>
             </div>
         </div>
         <div id="spit">
