--- a/index.html
+++ b/index.html
@@ -262,6 +262,9 @@ Scheduled: 19.02. 2014. 13:30:00  to 15:00:00</pre></del>
         <!-- there is always mud on the bottom... makes the scrolling smoother... -->
     </div>
 
+    <hr />
+    <p class="footfootfooter">v0.2 2015-02-04 <a href="http://changeset.hr/" target="_blank">changeset.hr</a></p>
+
 </div>
 <!-- /container -->
 
