--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                         <option value="1" data-datetimeformat='D MMMM YYYY h:mm:ss a' data-timeformat="h:mm:ss a">19 May 2014 8:45:00 am</option>
                         <option value="2" data-datetimeformat='MMM D, YYYY, h:mm:ss a' data-timeformat="h:mm:ss a">Jun 5, 2014, 12:30:00 PM</option>
                         <option value="3" data-datetimeformat='DD.MM. YYYY. HH:mm' data-timeformat="HH:mm">01.12 2015. 09:45</option>
+                        <option value="4" data-datetimeformat='DD MMM YYYY HH:mm' data-timeformat="HH:mm">07 Apr 2016 20:45</option>
                         <option value="custom" data-datetimeformat="custom" data-timeformat="custom">custom</option>
                     </select>
                     <div id="custom_box">
