--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                 <li><a href="#caveat">Caveat</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
+            <a href="https://github.com/frnhr/ical_aggregator"
+               target="_blank"
+               class="ork_me"></a>
         </div>
         <!--/.nav-collapse -->
     </div>
@@ -135,6 +138,19 @@
     <p>
         And what then, you ask? <br />
         Oh, well... you can copy the resulting table. And paste it somewhere. I don't know... To a spreadsheet, perhaps.
+    </p>
+
+    <h3>iCal? You mean Calendar!</h3>
+    <p>
+        A long time ago (2012) on a Mac near, near you...
+    </p>
+    <p>
+        iCal was renamed to Calendar.
+    </p>
+    <p>
+        You can read about it on
+        <a href="https://en.wikipedia.org/wiki/Calendar_(application)"
+           target="_blank">The Internet</a>.
     </p>
 
 
