--- a/index.html
+++ b/index.html
@@ -82,13 +82,14 @@
                 <li><a href="#caveat">Caveat</a></li>
                 <li><a href="#about">About</a></li>
             </ul>
-            <a href="https://github.com/frnhr/ical_aggregator"
-               target="_blank"
-               class="ork_me"></a>
         </div>
         <!--/.nav-collapse -->
     </div>
 </div>
+
+<a href="https://github.com/frnhr/ical_aggregator"
+   target="_blank"
+   class="ork_me hidden-xs"></a>
 
 <div class="container theme-showcase" role="main">
 
