--- a/index.html
+++ b/index.html
@@ -6,27 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <title>iCalligator</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
-    <link href="/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
-    <script src="/js/json2.js"></script>
-    <script src="/js/jquery-1.10.2.min.js"></script>
-    <script src="/js/jquery.dataTables.min.js"></script>
-    <script src="/js/moment.js"></script>
-    <script src="/js/dataTables.tableTools.min.js"></script>
-    <link href="/css/datatables/jquery.dataTables.css" rel="stylesheet">
-    <link href="/css/datatables/dataTables.tableTools.min.css" rel="stylesheet">
+    <script src="js/json2.js"></script>
+    <script src="js/jquery-1.10.2.min.js"></script>
+    <script src="js/jquery.dataTables.min.js"></script>
+    <script src="js/moment.js"></script>
+    <script src="js/dataTables.tableTools.min.js"></script>
+    <link href="css/datatables/jquery.dataTables.css" rel="stylesheet">
+    <link href="css/datatables/dataTables.tableTools.min.css" rel="stylesheet">
 
-    <link href="/css/main.css" rel="stylesheet">
-    <script src="/js/plugins.js"></script>
-    <script src="/js/main.js"></script>
+    <link href="css/main.css" rel="stylesheet">
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -35,8 +36,8 @@
     <![endif]-->
 
     <!-- the idiotic EU cookie thing -->
-    <script src="/js/jquery.cookiebar.js"></script>
-    <link href="/css/jquery.cookiebar.css" rel="stylesheet">
+    <script src="js/jquery.cookiebar.js"></script>
+    <link href="css/jquery.cookiebar.css" rel="stylesheet">
     <script type="text/javascript">
         $(function(){
             $.cookieBar({
@@ -97,7 +98,7 @@
     <div class="jumbotron">
         <div class="row" id="home">
             <div class="col-sm-6">
-                <img src="/img/logo.png" alt="logo" id="logo" />
+                <img src="img/logo.png" alt="logo" id="logo" />
             </div>
             <div class="col-sm-6">
                 <h1>iCalligator</h1>
@@ -290,7 +291,7 @@ Scheduled: 19.02. 2014. 13:30:00  to 15:00:00</pre></del>
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 
 
