fixed date parsing for my standard date format eg: Oct 15, 2020 at 13:45 to 15:00. Hid all other time formats in UI

--- a/index.html
+++ b/index.html
@@ -168,11 +168,12 @@
             <div class="form-group row">
                 <div class="col-sm-6">
                     <label for="datetime_format">Select your format: </label><select class="form-control" id="datetime_format">
-                        <option value="1" data-datetimeformat='D MMMM YYYY h:mm:ss a' data-timeformat="h:mm:ss a">19 May 2014 8:45:00 am</option>
-                        <option value="2" data-datetimeformat='MMM D, YYYY, h:mm:ss a' data-timeformat="h:mm:ss a">Jun 5, 2014, 12:30:00 PM</option>
-                        <option value="3" data-datetimeformat='DD.MM. YYYY. HH:mm' data-timeformat="HH:mm">01.12 2015. 09:45</option>
-                        <option value="4" data-datetimeformat='DD MMM YYYY HH:mm' data-timeformat="HH:mm">07 Apr 2016 20:45</option>
-                        <option value="custom" data-datetimeformat="custom" data-timeformat="custom">custom</option>
+                        <option value="1" data-datetimeformat='MMM D, YYYY h:mm a' data-timeformat="h:mm a">Sep 1, 2020 8:45 AM</option>
+<!--                        <option value="2" data-datetimeformat='D MMMM YYYY h:mm:ss a' data-timeformat="h:mm:ss a">19 May 2014 8:45:00 am</option>-->
+<!--                        <option value="3" data-datetimeformat='MMM D, YYYY, h:mm:ss a' data-timeformat="h:mm:ss a">Jun 5, 2014, 12:30:00 PM</option>-->
+<!--                        <option value="4" data-datetimeformat='DD.MM. YYYY. HH:mm' data-timeformat="HH:mm">01.12 2015. 09:45</option>-->
+<!--                        <option value="5" data-datetimeformat='DD MMM YYYY HH:mm' data-timeformat="HH:mm">07 Apr 2016 20:45</option>-->
+<!--                        <option value="custom" data-datetimeformat="custom" data-timeformat="custom">custom</option>-->
                     </select>
                     <div id="custom_box">
                         <p>please specify custom format using syntax from <a href="http://momentjs.com/docs/#/displaying/format/" target="_blank">moment.js specification</a> </p>
