Removed call to google analytics. Cleaned up front page.

--- a/index.html
+++ b/index.html
@@ -36,128 +36,101 @@
     <![endif]-->
 
     <!-- the idiotic EU cookie thing -->
-    <script src="js/jquery.cookiebar.js"></script>
-    <link href="css/jquery.cookiebar.css" rel="stylesheet">
-    <script type="text/javascript">
-        $(function(){
-            $.cookieBar({
-                fixed: true,
-                message: '<strong>DANGER! DANGER! DANGER!</strong> This site uses <a href="http://en.wikipedia.org/wiki/HTTP_cookie" target="_blank" style="font-weight: bold; padding: 0; margin: 0; text-decoration: underline;">COOKIES</a>!!!! It tracks usage and preferences!'
-            });
-        });
-    </script>
-    <style type="text/css">
-        #cookie-bar.fixed {
-            z-index: 10000;
-            min-height: 50px;
-            height: auto;
-            padding: 0 5px;
-        }
-        #cookie-bar p {
-            margin: 11px 0;
-            padding: 0;
-        }
-    </style>
+<!--    <script src="js/jquery.cookiebar.js"></script>-->
+<!--    <link href="css/jquery.cookiebar.css" rel="stylesheet">-->
+<!--    <script type="text/javascript">-->
+<!--        $(function(){-->
+<!--            $.cookieBar({-->
+<!--                fixed: true,-->
+<!--                message: '<strong>DANGER! DANGER! DANGER!</strong> This site uses <a href="http://en.wikipedia.org/wiki/HTTP_cookie" target="_blank" style="font-weight: bold; padding: 0; margin: 0; text-decoration: underline;">COOKIES</a>!!!! It tracks usage and preferences!'-->
+<!--            });-->
+<!--        });-->
+<!--    </script>-->
+<!--    <style type="text/css">-->
+<!--        #cookie-bar.fixed {-->
+<!--            z-index: 10000;-->
+<!--            min-height: 50px;-->
+<!--            height: auto;-->
+<!--            padding: 0 5px;-->
+<!--        }-->
+<!--        #cookie-bar p {-->
+<!--            margin: 11px 0;-->
+<!--            padding: 0;-->
+<!--        }-->
+<!--    </style>-->
 
 </head>
 
 <body role="document">
 
 <!-- Fixed navbar -->
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">iCalligator</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">What</a></li>
-                <li><a href="#how">How</a></li>
-                <li><a href="#the-swamp">The Swamp</a></li>
-                <li><a href="#caveat">Caveat</a></li>
-                <li><a href="#about">About</a></li>
-            </ul>
-        </div>
-        <!--/.nav-collapse -->
-    </div>
-</div>
+<!--<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">-->
+<!--    <div class="container">-->
+<!--        <div class="navbar-header">-->
+<!--            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">-->
+<!--                <span class="sr-only">Toggle navigation</span>-->
+<!--                <span class="icon-bar"></span>-->
+<!--                <span class="icon-bar"></span>-->
+<!--                <span class="icon-bar"></span>-->
+<!--            </button>-->
+<!--            <a class="navbar-brand" href="/">iCalligator</a>-->
+<!--        </div>-->
+<!--        <div class="navbar-collapse collapse">-->
+<!--            <ul class="nav navbar-nav">-->
+<!--                <li class="active"><a href="#">What</a></li>-->
+<!--                <li><a href="#how">How</a></li>-->
+<!--                <li><a href="#the-swamp">The Swamp</a></li>-->
+<!--                <li><a href="#caveat">Caveat</a></li>-->
+<!--                <li><a href="#about">About</a></li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--        &lt;!&ndash;/.nav-collapse &ndash;&gt;-->
+<!--    </div>-->
+<!--</div>-->
 
-<a href="https://github.com/frnhr/ical_aggregator"
-   target="_blank"
-   class="ork_me hidden-xs"></a>
+<!--<a href="https://github.com/frnhr/ical_aggregator"-->
+<!--   target="_blank"-->
+<!--   class="ork_me hidden-xs"></a>-->
 
 <div class="container theme-showcase" role="main">
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-        <div class="row" id="home">
-            <div class="col-sm-6">
-                <img src="img/logo.png" alt="logo" id="logo" />
-            </div>
-            <div class="col-sm-6">
-                <h1>iCalligator</h1>
+<!--    &lt;!&ndash; Main jumbotron for a primary marketing message or call to action &ndash;&gt;-->
+<!--    <div class="jumbotron">-->
+<!--        <div class="row" id="home">-->
+<!--            <div class="col-sm-6">-->
+<!--                <img src="img/logo.png" alt="logo" id="logo" />-->
+<!--            </div>-->
+<!--            <div class="col-sm-6">-->
+<!--                <h1>iCalligator</h1>-->
 
-                <p>Time aggregator for iCal!</p>
+<!--                <p>Time aggregator for iCal!</p>-->
 
-                <p>Paste from iCal and get a summarized table of your calendar entries.</p>
+<!--                <p>Paste from iCal and get a summarized table of your calendar entries.</p>-->
 
-                <p><a href="#the-swamp" class="btn btn-primary btn-lg" role="button">Take me to The Swamp! &raquo;</a></p>
+<!--                <p><a href="#the-swamp" class="btn btn-primary btn-lg" role="button">Take me to The Swamp! &raquo;</a></p>-->
 
-                <p>Yeah, I keep my project time logs in iCal! Sometimes. So what?</p>
+<!--                <p>Yeah, I keep my project time logs in iCal! Sometimes. So what?</p>-->
 
-                <p>
-                    iCal aggregator => iCal alligator => iCalligator
-                </p>
+<!--                <p>-->
+<!--                    iCal aggregator => iCal alligator => iCalligator-->
+<!--                </p>-->
 
-            </div>
-        </div>
-    </div>
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
 
     <div class="page-header" id="how">
-        <h1>How</h1>
+        <h1>How to use</h1>
     </div>
     <p>
-        Simply select any number of iCal events from and paste them in <a href="#the-swamp">The Swamp</a>. Then there will
-        come an iCalligator, chew it all up and spit out aggregated time table.
-    </p>
-
-    <p class="text-center">
-        <img src="img/instructions.png" alt="screenshot" />
-        <img src="img/instructions2.png" alt="screenshot" />
-    </p>
-
-    <p>
-        After the loborious task of clicking around, PASTE it here and anjoy!
-    </p>
-
-    <p>
-        And what then, you ask? <br />
-        Oh, well... you can copy the resulting table. And paste it somewhere. I don't know... To a spreadsheet, perhaps.
-    </p>
-
-    <h3>iCal? You mean Calendar!</h3>
-    <p>
-        A long time ago (2012) on a Mac near, near you...
-    </p>
-    <p>
-        iCal was renamed to Calendar.
-    </p>
-    <p>
-        You can read about it on
-        <a href="https://en.wikipedia.org/wiki/Calendar_(application)"
-           target="_blank">The Internet</a>.
-    </p>
-
+        Open Mac OS Calendar app.<br/>
+        Make sure only the calendar you are interested in is selected.<br/>
+        Switch to monthly view, hit CMD+A<br/>
+<!--        Paste into fields below.-->
 
     <div class="page-header" id="the-swamp">
-        <h1>The Swamp</h1>
+        <h1>Converter</h1>
     </div>
     <form action="" method="POST" id="the-alligator">
         <div id="food-tray">
@@ -219,25 +192,25 @@
         </div>
     </form>
 
-    <div class="page-header" id="caveat">
-        <h1>Caveat</h1>
-    </div>
-    <h3><del>other formats</del></h3>
-    <p>
-        <del>Only works for the following time format:</del>
-    </p>
-    <del><pre>Event A
-Scheduled: 19.02. 2014. 13:30:00  to 15:00:00</pre></del>
+<!--    <div class="page-header" id="caveat">-->
+<!--        <h1>Caveat</h1>-->
+<!--    </div>-->
+<!--    <h3><del>other formats</del></h3>-->
+<!--    <p>-->
+<!--        <del>Only works for the following time format:</del>-->
+<!--    </p>-->
+<!--    <del><pre>Event A-->
+<!--Scheduled: 19.02. 2014. 13:30:00  to 15:00:00</pre></del>-->
 
-    <h3>overlapping events</h3>
-    <p>
-        Does not check for overlapping entries. Meaning if you have two simultaneous entries in the calendar, they'll get added together just as if they were consecutive. This might be desired or might not.
-    </p>
+<!--    <h3>overlapping events</h3>-->
+<!--    <p>-->
+<!--        Does not check for overlapping entries. Meaning if you have two simultaneous entries in the calendar, they'll get added together just as if they were consecutive. This might be desired or might not.-->
+<!--    </p>-->
 
-    <h3>something else?</h3>
-    <p>
-        Found a bug? Format not working? Need a feature added? <a href="http://changeset.hr/contact" target="_blank">Contact me</a> and I'll see what I can do.
-    </p>
+<!--    <h3>something else?</h3>-->
+<!--    <p>-->
+<!--        Found a bug? Format not working? Need a feature added? <a href="http://changeset.hr/contact" target="_blank">Contact me</a> and I'll see what I can do.-->
+<!--    </p>-->
 
 
     <div class="page-header" id="about">
@@ -245,45 +218,45 @@ Scheduled: 19.02. 2014. 13:30:00  to 15:00:00</pre></del>
     </div>
 
     <p>
-        Made by frnhr.
+        Made by frnhr. Fixed / adapted for "MMM D, YYYY h:mm a" by Maex.
     </p>
-    <p>
-        Very quickly. Not being elegant. At all. Much to improve. But probably never will. Because it works. And it's not a work of art. And I'm not a frontend dev.
-    </p>
-    <p>
-        Using:
-    </p>
-    <ul>
-        <li><a href="http://jquery.com/" target="_blank">jQuery</a></li>
-        <li><a href="http://momentjs.com/" target="_blank">Moment.js</a></li>
-        <li><a href="http://datatables.net/" target="_blank">DataTables</a></li>
-        <li><a href="http://datatables.net/extras/tabletools/" target="_blank">TableTools</a></li>
-        <li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></li>
-        <li><a href="https://github.com/carhartl/jquery-cookie" target="_blank">jQuery Cookie Plugin</a></li>
-    </ul>
-    <p>And of course:</p>
-    <ul>
-        <li><a href="http://www.apple.com/osx/apps/#calendar" target="_blank">Calendar</a></li>
-    </ul>
+<!--    <p>-->
+<!--        Very quickly. Not being elegant. At all. Much to improve. But probably never will. Because it works. And it's not a work of art. And I'm not a frontend dev.-->
+<!--    </p>-->
+<!--    <p>-->
+<!--        Using:-->
+<!--    </p>-->
+<!--    <ul>-->
+<!--        <li><a href="http://jquery.com/" target="_blank">jQuery</a></li>-->
+<!--        <li><a href="http://momentjs.com/" target="_blank">Moment.js</a></li>-->
+<!--        <li><a href="http://datatables.net/" target="_blank">DataTables</a></li>-->
+<!--        <li><a href="http://datatables.net/extras/tabletools/" target="_blank">TableTools</a></li>-->
+<!--        <li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a></li>-->
+<!--        <li><a href="https://github.com/carhartl/jquery-cookie" target="_blank">jQuery Cookie Plugin</a></li>-->
+<!--    </ul>-->
+<!--    <p>And of course:</p>-->
+<!--    <ul>-->
+<!--        <li><a href="http://www.apple.com/osx/apps/#calendar" target="_blank">Calendar</a></li>-->
+<!--    </ul>-->
 
-    <hr />
+<!--    <hr />-->
 
-    <p>
-        Oh, P.S:
-    </p>
+<!--    <p>-->
+<!--        Oh, P.S:-->
+<!--    </p>-->
     <p>
         It's completely browser-side JS, nothing gets sent to the server. So your privacy is safe. Really. If you don't believe me, that's ok, you can unplug from the internet and it will still work.
     </p>
-    <p>
-        The only piece of info that gets recorded is a visit, by Google Analytics. That way I have some idea if anyone other then me is using this app. I hope that's ok.
-    </p>
+<!--    <p>-->
+<!--        The only piece of info that gets recorded is a visit, by Google Analytics. That way I have some idea if anyone other then me is using this app. I hope that's ok.-->
+<!--    </p>-->
 
-    <div id="mud-on-the-bottom-of-the-marsh">
-        <!-- there is always mud on the bottom... makes the scrolling smoother... -->
-    </div>
+<!--    <div id="mud-on-the-bottom-of-the-marsh">-->
+<!--        &lt;!&ndash; there is always mud on the bottom... makes the scrolling smoother... &ndash;&gt;-->
+<!--    </div>-->
 
-    <hr />
-    <p class="footfootfooter">v0.2 2015-02-04 <a href="http://changeset.hr/" target="_blank">changeset.hr</a></p>
+<!--    <hr />-->
+<!--    <p class="footfootfooter">v0.2 2015-02-04 <a href="http://changeset.hr/" target="_blank">changeset.hr</a></p>-->
 
 </div>
 <!-- /container -->
@@ -304,7 +277,7 @@ Scheduled: 19.02. 2014. 13:30:00  to 15:00:00</pre></del>
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    // ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
